add working CD and fix spelling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ cover: false
     <nav class="main-nav overlay clearfix">
             {% if page.logo %}
                 <a class="blog-logo" href="{{ site.baseurl }}">
-                    <img src="{{ page.logo }}" alt="Blog Logo" />
+                    <img src="{{ page.logo }}" alt="Logo" />
                 </a>
             {% endif %}
             <a class="subscribe-button" href="{{ site.domain_name }}">Landing</a>
